# LZRoverEngine

./: .gitignore  CMakeLists.txt  README.md
resources/models/: lunarSurface.7z  temp.7z
resources/models/Box/: basicBox.mtl
resources/models/lunarSurface/: lunarsurface.mtl
src/: main.cpp  settings.h
src/lunarEmulation/: LZEngine.h  NoiseModel.h  README.md  dynamicVoxelGridMesh.h  glad.c  lunarSurface.h  mesh.h  model.h  readme.md  roverObject.h  userCamera.h
src/lunarEmulation/shaders/: depthShader.fs  depthShader.vs  lineShader.vs  opticalShader.fs  opticalShader.vs  pointShader.fs  pointShader.vs  shader.h
src/pathplanning/: pathplanning.h
src/segmatch/: normalEstimator.h  segmentation.h
src/slam/: ICP.h  KDTree.h  dynamicVoxelGrid.h  roverPoseEstimate.h  voxel.h
